# foundation-share-bridge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
scripts/: handle-deep-link.ps1  handle-deep-link.sh  install-linux-service.sh  install-macos-service.sh  install-windows-service.ps1  install.sh  package-linux-bundle.sh  package-macos-installer.sh  package-macos-pkg.sh  package-windows-bundle.sh  run-bridge-stack-linux.sh  run-bridge-stack.ps1  run-bridge-stack.sh  uninstall-linux-service.sh  uninstall-macos-service.sh  uninstall.sh
scripts/install/: install-launch-agent.sh  install-linux-service.sh  install-macos-service.sh  install-windows-service.ps1  install.ps1  install.sh
scripts/lint/: check-file-size.sh  check-folder-fanout.sh  check-no-monolith.sh  run-all.sh
scripts/menu/: foundation-share-bridge-menu.swift
scripts/package/: package-linux-bundle.sh  package-macos-installer.sh  package-macos-pkg.sh  package-release-bundles.sh  package-windows-bundle.sh
scripts/runtime/: run-bridge-stack-linux.sh  run-bridge-stack.sh
scripts/uninstall/: uninstall-launch-agent.sh  uninstall-windows-service.ps1  uninstall.ps1  uninstall.sh
src/: app.rs  error.rs  inline.rs  lib.rs  main.rs
src/html/: assets.rs  mod.rs
src/html/handler/: mod.rs  root.rs  settings.rs  share.rs
src/html/render/: artist.rs  mod.rs  page.rs  settings.rs  status.rs
src/html/scripts/: autolink.rs  inventory.js  inventory.rs  live_status.rs  mod.rs  settings.rs
src/html/styles/: mod.rs  page.css  page.rs  settings.rs
src/model/: config.rs  mod.rs  pin.rs  relay.rs  session.rs  system.rs
src/model/bridge/: mod.rs
src/model/bridge/session/: handler.rs  mod.rs  service.rs
src/model/bridge/system/: handler.rs  service.rs  types.rs
src/model/catalog/: handler.rs  mod.rs  service.rs
src/model/config/: handler.rs  mod.rs  service.rs  types.rs
src/model/pin/: dependency.rs  inventory.rs  metadata.rs  mod.rs  types.rs
src/model/pin/client/: discovery.rs  kubo.rs  mod.rs  remote.rs  sync.rs
src/model/pin/service/: core.rs  handler.rs  inventory.rs  lifecycle.rs  mod.rs  work.rs
src/model/pin/service/handler/: mod.rs  upload.rs
src/model/relay/: handler.rs  mod.rs  service.rs  socket.rs
src/model/relay/tunnel/: install.rs  kubo_announce.rs  mod.rs  service.rs
src/model/session/: handler.rs  mod.rs
src/model/system/: handler.rs  mod.rs  probe.rs  service.rs
src/model/tunnel/: install.rs  mod.rs  service.rs
src/util/: data.rs  file.rs  format.rs  machine.rs  mod.rs  text.rs  url.rs
src/util/web/: mod.rs  text.rs
