[package]
name = "foundation-share-bridge"
version = "0.1.0"
edition = "2024"
description = "Desktop IPFS bridge for Foundation Archive rescue shares."
license = "Apache-2.0"
repository = "https://github.com/Ravonus/foundation-share-bridge"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures-util = "0.3.32"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
