[package]
name = "foundation-share-bridge"
version = "0.1.0"
edition = "2024"
description = "Desktop IPFS bridge for Foundation Archive rescue shares."
license = "Apache-2.0"
repository = "https://github.com/Ravonus/foundation-share-bridge"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures-util = "0.3.32"
governor = "0.10"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower_governor = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[lints.rust]
unsafe_code     = "forbid"
missing_docs    = "warn"
unused_must_use = "deny"

[lints.clippy]
# Broad groups, warn-level so they don't wall off iteration.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# User's hard rules — deny. These are the guardrails preventing re-monolithing.
too_many_arguments   = "deny"
too_many_lines       = "deny"
cognitive_complexity = "deny"
large_enum_variant   = "deny"

# Safety / correctness — strict. Current code already satisfies these
# (0 unwrap, 1 expect, 0 panic, 0 dbg, 0 todo, 0 unsafe) so we lock them in.
unwrap_used      = "deny"
expect_used      = "warn"
panic            = "deny"
dbg_macro        = "deny"
todo             = "warn"
unimplemented    = "deny"
await_holding_lock = "deny"

# Pedantic rules that are too noisy or counterproductive in practice.
module_name_repetitions = "allow"
missing_errors_doc      = "warn"
missing_panics_doc      = "warn"
